Restore Java 17 code